<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">ARQuest</string>
    <string name="toggle_android">Toggle android</string>
    <string name="inventory_str">Inventory</string>
    <string name="journal_str">Journal</string>
    <string name="release_str">Release</string>
    <string name="to_quest_fragment">Back to quest</string>
    <string name="to_ar_fragment">Дополненная реальность</string>
    <string name="cancel_quest">Завершить квест</string>

    <string name="auth_activity_btn">Auth Activity</string>
    <string name="ar_activity_btn">AR Fragment</string>
    <string name="json_web_token">jwt</string>
    <string name="first_launch">isFirstLaunch</string>
    <string name="foreground_tracking">isForeground</string>
    <string name="foreground">foreground</string>
    <string name="quest_id">quest_id</string>
    <string name="download">download</string>
    <string name="login_title">Авторизация</string>
    <string name="register_title">Регистрация</string>
    <string name="login_hint">login</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">password</string>
    <string name="login_btn">Авторизоваться</string>
    <string name="logout_btn">Выйти</string>
    <string name="stop_service_btn">Остановить отслеживание</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="text_login_from_register">Нет аккаунта? Зарегистрироваться.</string>
    <string name="text_register_from_login">Уже зарегистрированы? Авторизоваться.</string>
    <string name="logout_str">Выйти</string>
    <string name="failed_to_authorize_str">Неверная пара логин/пароль</string>
    <string name="response_code_template">Response code is %d</string>
    <string name="connection_lost_str">Нет сети</string>
    <string name="out_of_range_str">Пользователь вне зоны доступа</string>
    <string name="server_internal_error_str">Сервер упал</string>
    <string name="duplicate_user_str">Пользовтель с таким именем уже существует</string>
    <string name="user_not_found_str">Пользователь не найден (что странно)</string>
    <string name="journal_title">Журнал событий</string>
    <string name="journal_one_message_title">Последнее событие</string>
    <string name="inventory_title">Инвентарь</string>
    <string name="checkpoint_title">Список контрольных точек</string>

    <string name="show_more_str"><u>Подробнее</u></string>
    <string name="hide_str"><u>Скрыть</u></string>

    <string name="ar_menu_bottom_str">AR</string>
    <string name="quest_menu_bottom_str">Квесты</string>
    <string name="current_quest_menu_bottom_str">Текущий</string>
    <string name="settings_menu_bottom_str">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interact_str">Act</string>
    <string name="journal_updated_str">Новая запись добавлена в журнал</string>
    <string name="inventory_updated_str">Вы получили %d %s</string>
    <string name="direct_camera_to_floor_str">Наведите камеру на землю</string>
    <string name="start_quest_str">Начать!</string>
    <string name="select_quest_hint_str">Чтобы начать прохождение квеста, нажмите сюда</string>
    <string name="select_quest_hint_name">StartQuestRequest</string>
    <string name="start_ar_str">Чтобы перейти в режим дополненной реальности, нажмите на эту кнопку</string>
    <string name="find_floor_str">Наведите камеру на пол</string>
    <string name="find_floor_help_str">Если ничего не происходит</string>
    <string name="greeting_title">Привет!</string>
    <string name="greeting_message">Добро пожаловать в ARQuest - приложение, где квесты представлены в дополненной реальности.
    Для работы приложения требуются разрешения на использование камеры и геоданных.</string>
    <string name="help_title">Обучение</string>
    <string name="help_message">Хотите пройти обучение? </string>
    <string name="cancel_quest_title">Прервать квест</string>
    <string name="cancel_quest_message">Завершение квеста приведет к потере текущего прогресса. Продолжить? </string>
    <string name="congratulation_title">Поздравляем</string>
    <string name="congratulation_message">Вы прошли первый квест. Хотите вернуться к выбору квестов?</string>
    <string name="non_permission_title">Необходимы разрешения</string>
    <string name="non_permission_message">Для выбора квестов разрешите приложению использовать камеру и геолокацию</string>
    <string name="non_camera_permission_message">Для выбора квестов разрешите приложению использовать камеру</string>
    <string name="non_geo_permission_message">Для выбора квестов разрешите приложению использовать геолокацию</string>
    <string name="act_btn_hint_str">
        Подойдите ближе к виртуальному объекту. Кнопка станет активной, и вы сможете
        провести взаимодействие с объектом.
    </string>
    <string name="default_fragment_toolbar_title">Список квестов</string>
    <string name="quest_list_fragment_title">Список квестов</string>
    <string name="quest_fragment_title">Текущий квест</string>
    <string name="settings_fragment_title">Настройки</string>
    <string name="journal_fragment_title">Журнал</string>
    <string name="place_fragment_title">Найденные точки</string>
    <string name="items_list_fragment">Инвентарь</string>
    <string name="congrat_msg">Поздравляем! Вы прошли демонстрационный квест. Вы будете перенаправлены на исходный экран, где сможете самостоятельно продолжить исследование нашего приложения</string>
    <string name="congrat_msg_skull">Поздравляем! Вы прошли квест. Вы будете перенаправлены на исходный экран, где сможете самостоятельно продолжить исследование нашего приложения</string>
    <string name="congrat_title">Поздравление</string>

    <string name="defeat_msg_skull">К сожалению, вы проиграли. Череп увернулся и больше не хочешь с вами иметь дело. Вы будете перенаправлены на исходный экран, где сможете самостоятельно продолжить исследование нашего приложения или попытаться пройти квест заново</string>
    <string name="defeat_title">Поражение</string>

    <string name="geofence_notification_text"> Исследовать место </string>
    <string name="switch_geo_text"> Фоновое отслеживание геолокации </string>
    <string name="switch_geo_title">Фоновое отслеживание геолокации</string>
    <string name="switch_geo_message">Отключение фонового отслеживания не позволит приложении сообщить о найденном месте. Продолжить? </string>
    <string name="download_btn_str">Загрузить</string>

    <string name="inventory_help_str">Инвентарь</string>
    <string name="journal_help_str">Журнал событий</string>
    <string name="interact_help_str">Действие</string>
    <string name="return_inventory_help_str">Вернуть в инвентарь</string>
    <string name="inventory_empty_text">Инвентарь пуст</string>
    <string name="journal_empty_text">Нет событий</string>
    <string name="checkpoints_empty_text">Места не найдены</string>

    <string name="alert_last_message_title">Последнее событие</string>
    <string name="quest_title_str">Название квеста</string>
    <string name="quest_places_title_str">Место действия</string>
    <string name="quest_places_txt_str">Описание места действия</string>
    <string name="quest_description_str">Описание квеста</string>
    <string name="Tutorial">Обучение</string>


</resources>
