<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_quests"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/quest_menu_bottom_str"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_current_quest"
        android:enabled="true"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/current_quest_menu_bottom_str"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ar"
        android:enabled="true"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/ar_menu_bottom_str"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/settings_menu_bottom_str"
        app:showAsAction="ifRoom" />-->

</menu>