<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_ar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quest.ARActivity">

<!--<com.viro.core.ViroViewARCore-->
    <!--android:id="@+id/viro_view"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_gravity="top" />-->

<!--<ImageButton
    android:id="@+id/close_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:background="@null"
    android:src = "@drawable/ic_clear_black_24dp"/>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:id="@+id/collision_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inventory_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/inventory_str"
            android:textSize="@dimen/button_text_size"
            />

        <Button
            android:id="@+id/journal_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/journal_str"
            android:textSize="@dimen/button_text_size"
            />
        
        <Button
            android:id="@+id/interact_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/interact_str"
            android:textSize="@dimen/button_text_size"
            />


    </LinearLayout>
</LinearLayout>

</RelativeLayout>
