<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_quest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/layout_botom_margin_size"
    android:layout_marginTop="@dimen/layout_top_margin_size"
    android:layout_marginStart="@dimen/quest_layout_left_margin_size"
    android:layout_marginEnd="@dimen/quest_layout_right_margin_size">

    <TextView
        android:id="@+id/quest_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest_title_str"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/quest_places_title"
        android:layout_below="@+id/quest_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/quest_places_title_str"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/quest_places_txt"
        android:layout_below="@+id/quest_places_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quest_places_txt_str"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/quest_description_title"
        android:layout_below="@+id/quest_places_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/quest_description_str"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/quest_description_txt"
        android:layout_below="@+id/quest_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quest_description_str"
        android:textAlignment="center" />

    <Button
        android:id="@+id/to_ar_mode_btn"
        android:layout_below="@+id/quest_description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:drawableBottom="@drawable/ic_camera_alt_black_24dp"
        android:text="@string/to_ar_fragment"
        android:textSize="12sp"/>

    <!--<TextView
        android:id="@+id/journal_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/journal_one_message_title"
        android:textAlignment="center" />

    <include layout="@layout/item_message_card"
        android:id="@+id/last_journal_record_card"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />

    <TextView
        android:id="@+id/inventory_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inventory_title"
        android:textAlignment="center" />

    <include layout="@layout/fragment_items_list"
        android:id="@+id/items_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />

    <TextView
        android:id="@+id/places_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkpoint_title"
        android:textAlignment="center" />

    <include layout="@layout/fragment_checkpoints"
        android:id="@+id/places_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_quest_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel_quest"
            android:textColor="@color/red"
            android:textSize="12sp"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/to_ar_mode_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableBottom="@drawable/ic_camera_alt_black_24dp"
            android:text="@string/to_ar_fragment"
            android:textSize="12sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaces_login" />-->


</RelativeLayout>
